--- a/examples/repository-mode/package.json
+++ b/examples/repository-mode/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "sequelize": "^5.15.1",
+    "sequelize-dm8": "^5.15.1",
     "sequelize-typescript": "^1.0.0-alpha.9",
     "strong-error-handler": "^3.2.0"
   }
